static/css/style.css
/* CSS Variables */
/* CSS Variables taken from my other project and adjusted for this project
https://github.com/JamesBracken/Ember-Ash
*/
:root {
    --clr-primary: #f2eee8;
    /* Isabeline */
    --clr-secondary: #e10a0a;
    /* Red*/
    --clr-tertiary: #6F6866;
    /* Fill out with tertiary color */
    --clr-black: #454545;
    /* Onyx */
    --clr-white: #ffffff;
    /* White */
    /* Headings */
    --text-primary: "Roboto", serif;
    /* Body text */
    --text-secondary: "Lato", serif;

    --fs-heading-1: 3.125rem;
    /* 50px */
    --fs-heading-2: 2.5rem;
    /* 40px */
    --fs-heading-3: 2.188rem;
    /* 35px */
    --fs-heading-4: 1.875rem;
    /* 30px */
    --fs-subheading: 1.25rem;
    /* 20px */
    --fs-body: 1rem;
    /* 16px */

    --fw-extra-bold: 800;
    --fw-bold: 700;
    --fw-semi-bold: 550;
    --fw-medium: 425
    --fw-regular: 300;

    --border-radius: 10px;
    --box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
    --transition-duration: 0.3s;
}

/* GLOBAL STYLES----------------------------- */
/* setting all styles across the website here to increase uniformity
across the code and reduce unexpected behaviours and styles */

html {
    display: flex;
    justify-content: center;
    overflow-x: hidden;
}

/* Push the body below the header to make it visible */
body {
    padding-top: 100px;
    max-width: 2500px !important;
    display: flex;
    flex-direction: column;
}

footer {
    margin-top: auto !important;
}

h1 {
    font-size: var(--fs-heading-1) !important;
    font-family: var(--text-primary);
    font-weight: var(--fw-semi-bold);
}

h2 {
    font-size: var(--fs-heading-2) !important;
    font-family: var(--text-primary);
    font-weight: var(--fw-medium);
}

h3 {
    font-size: var(--fs-heading-3) !important;
    font-family: var(--text-primary);
    font-weight: var(--fw-medium);
}

h4 {
    font-size: var(--fs-heading-4) !important;
    font-family: var(--text-primary);
    font-weight: var(--fw-medium);
}

.subheading {
    font-size: var(--fs-subheading) !important;
}

p {
    font-size: var(--fs-body) !important;
    font-family: var(--text-secondary) !important;
    font-weight: var(--fw-regular) !important;
}

input,
button,
select,
textarea {
    border: none;
    font: inherit;
    background: none;
}

ol,
li,
ul {
    list-style: none !important;
}

a {
    text-decoration: none;
    color: inherit;
}

a:hover,
button:hover {
    cursor: pointer;
}

*::before,
*::after {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

img {
    object-fit: cover !important;
    width: 100% !important;
    border-radius: 0 !important;
}

hr {
    color: rgba(0, 0, 0, 0.4)
}

i {
    font-size: 40px;
    display: inline-block;
}

/* REUSABLE STYLES----------------------------------- */
/* Background styles */
.light-grey-bg {
    background-color: #EFF0F0;
}

.primary-clr-bg {
    background-color: var(--clr-primary);
}

.black-bg {
    background-color: var(--clr-black);
}

/* Text size styles */
.sz-text-heading-1 {
    font-size: var(--fs-heading-1) !important;
    /* 50px */
}

.sz-text-heading-2 {
    font-size: var(--fs-heading-2) !important;
    /* 40px */
}

.sz-text-heading-3 {
    font-size: var(--fs-heading-3) !important;
    /* 35px */
}

.sz-text-heading-4 {
    font-size: var(--fs-heading-4) !important;
    /* 30px */
}

.sz-text-subheading {
    font-size: var(--fs-subheading) !important;
    /* 20px */
}

.sz-text-body {
    font-size: var(--fs-body) !important;
    /* 16px */
}

/* Font weight styles */
.fw-text-extra-bold {
    font-weight: var(--fw-extra-bold);
}

.fw-text-bold {
    font-weight: var(--fw-bold);
}

.fw-text-semi-bold {
    font-weight: var(--fw-semi-bold);
}

.fw-text-medium {
    font-weight: var(--fw-medium);
}

.fw-text-regular {
    font-weight: var(--fw-regular);
}

.underline {
    border-bottom: var(--clr-black) 1px solid;
}

.white-text {
    color: var(--clr-white);
}

/* General button styles */

body button,
.button,
.red-btn {
    margin: 0 !important;
    color: var(--clr-white);
    padding: 9px 24px;
    font-weight: var(--fw-semi-bold);
    background-color: var(--clr-secondary);
    border-radius: 0;
    border: 0;
    margin: 10px 0 !important;
}

body button:hover,
.button:hover,
.red-btn:hover {
    background-color: #c80a0a;
    transition: 500ms ease-in-out;
}

body input,
input {
    border-bottom: #454545 1px solid;
}

.blue-btn {
    margin: 0 !important;
    color: var(--clr-white);
    padding: 9px 24px;
    font-weight: var(--fw-semi-bold);
    background-color: rgb(41, 41, 155);
    border-radius: 0;
    border: 0;
    margin: 10px 0 !important;
}

/* HEADER STYLES--------------------- */

header {
    box-shadow: var(--box-shadow);
    padding: 0 !important;
}

.logo {
    font-size: var(--fs-heading-2);
    font-weight: var(--fw-semi-bold);
    font-style: italic;
}

.nav-link,
.footer-link {
    position: relative;
    display: inline-block;
}

.nav-link:after,
.footer-link:after {
    content: '';
    position: absolute;
    left: 0;
    bottom: 0px;
    background-color: var(--clr-black);
    height: 1px;
    width: 0;
    transition: width 300ms;
}

.nav-link:hover:after,
.footer-link:hover:after {
    width: 100%;
}

.signup-button {
    padding: 8px 0;
}

.dropdown-menu {
    border-radius: 0 !important;
}

/* Adding separate styles for the CTA to attract attention */
.cta-btn {
    margin: 0 !important;
    color: var(--clr-white);
    padding: 9px 24px;
    font-weight: var(--fw-semi-bold);
    background-color: #6F6866;
    border-radius: 0;
    border: 0;
}

.cta-btn:hover {
    background-color: #595352;
    transition: 500ms ease-out;
}

.cta-li-container {
    display: flex;
    align-items: center;
}


/* MAIN CONTENT STYLES */

.home-hero-img-container {
    background: url("../images/home_page/hero_image.jpg");
    background-position: center;
    height: 400px;
}

/* Home description cards  */
.home-descriptions-card {
    height: 200px;
    border: 0;
}

/* Home CTA section */
.home-cta-section {
    background: url("../images/home_page/cta_section.jpg");
    background-position: center;
    color: var(--clr-primary);
    height: 800px;
    margin: 0;
}

.cta-section-item-container {
    position: relative;
    right: 0px;
    align-self: flex-end;
    justify-content: end;
    bottom: 30px;
}

.cta-section-item {
    display: flex;
    justify-content: end;
}

/* Exercises styles */

.exercise-item-header {
    border-bottom: var(--clr-black) solid 1px;
}

.exercise-item-image,
.exercise-item-image-container {
    height: 250px !important;
}

.exercise-item-content-container {
    background-color: var(--clr-primary);
}

@media screen and (min-width: 576px) {
    .home-descriptions-card {
        height: 280px;
    }

    .home-hero-img-container {
        height: 450px;
    }
}

@media screen and (min-width:768px) {
    .home-hero-img-container {
        height: 700px;
    }
}

@media screen and (min-width:1024px) {
    .home-descriptions-card {
        height: 240px;
    }
}

@media screen and (min-width:1200px) {
    .home-descriptions-card {
        height: 200px;
    }
}

